--- a/web/package.json
+++ b/web/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "VITE_CJS_IGNORE_WARNING=true vite --host",
+    "dev": "VITE_CJS_IGNORE_WARNING=true vite",
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
     "build-only": "vite build",
@@ -16,27 +16,27 @@
     "pinia": "^2.1.7",
     "signature_pad": "^4.1.7",
     "uuid": "^9.0.1",
-    "volar-service-prettier": "^0.0.17",
-    "vue": "^3.4.15",
-    "vue-router": "^4.2.5"
+    "volar-service-prettier": "^0.0.31",
+    "vue": "^3.4.21",
+    "vue-router": "^4.3.0"
   },
   "devDependencies": {
     "@tsconfig/node18": "^18.2.2",
-    "@types/node": "^20.11.5",
-    "@types/uuid": "^9.0.7",
-    "@vitejs/plugin-vue": "^5.0.3",
+    "@types/node": "^20.11.24",
+    "@types/uuid": "^9.0.8",
+    "@vitejs/plugin-vue": "^5.0.4",
     "@vue/tsconfig": "^0.5.1",
-    "autoprefixer": "^10.4.17",
-    "npm-run-all2": "^6.1.1",
-    "postcss": "^8.4.33",
-    "postcss-import": "^16.0.0",
-    "postcss-nesting": "^12.0.2",
-    "prettier": "^3.2.4",
+    "autoprefixer": "^10.4.18",
+    "npm-run-all2": "^6.1.2",
+    "postcss": "^8.4.35",
+    "postcss-import": "^16.0.1",
+    "postcss-nesting": "^12.0.4",
+    "prettier": "^3.2.5",
     "tailwindcss": "^3.4.1",
     "typescript": "~5.3.3",
-    "vite": "^5.0.12",
+    "vite": "^5.1.5",
     "vite-plugin-svg-icons": "^2.0.1",
-    "vite-plugin-vue-devtools": "^7.0.11",
-    "vue-tsc": "^1.8.27"
+    "vite-plugin-vue-devtools": "^7.0.16",
+    "vue-tsc": "^2.0.4"
   }
 }
