✨ feat: adobe trust certs support

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,6 +9,7 @@
       "program": "${workspaceFolder}/cmd/goSign",
       "envFile": "${workspaceFolder}/docker/.env",
       "args": ["serve"],
+      //"args": ["gen", "--config"],
     },
     {
       "name": "pdf",
