--- a/web/package.json
+++ b/web/package.json
@@ -1,14 +1,12 @@
 {
   "name": "web",
   "version": "0.0.0",
-  "private": true,
   "scripts": {
-    "dev": "VITE_CJS_IGNORE_WARNING=true vite",
-    "build": "run-p type-check \"build-only {@}\" --",
-    "preview": "vite preview",
-    "build-only": "vite build",
-    "type-check": "vue-tsc --build --force",
-    "update": "ncu -i --format group"
+    "dev": "VITE_CJS_IGNORE_WARNING=true bunx --bun vite",
+    "build": "VITE_CJS_IGNORE_WARNING=true bun vite build --mode production",
+    "preview": "bunx --bun vite preview --port 4173",
+    "typecheck": "bun vue-tsc --noEmit --skipLibCheck",
+    "update": "bun update --latest"
   },
   "dependencies": {
     "@types/nprogress": "^0.2.3",
@@ -22,12 +20,12 @@
   },
   "devDependencies": {
     "@tsconfig/node18": "^18.2.4",
-    "@types/node": "^20.14.9",
+    "@types/node": "^20.14.10",
     "@types/uuid": "^10.0.0",
     "@vitejs/plugin-vue": "^5.0.5",
     "@vue/tsconfig": "^0.5.1",
     "autoprefixer": "^10.4.19",
-    "npm-run-all2": "^6.2.0",
+    "npm-run-all2": "^6.2.2",
     "postcss": "^8.4.39",
     "postcss-import": "^16.1.0",
     "postcss-nesting": "^12.1.5",
@@ -37,6 +35,6 @@
     "vite": "^5.3.3",
     "vite-plugin-svg-icons": "^2.0.1",
     "vite-plugin-vue-devtools": "^7.3.5",
-    "vue-tsc": "^2.0.24"
+    "vue-tsc": "^2.0.26"
   }
 }
