--- a/web/package.json
+++ b/web/package.json
@@ -2,10 +2,11 @@
   "name": "web",
   "version": "0.0.0",
   "scripts": {
-    "dev": "VITE_CJS_IGNORE_WARNING=true bunx --bun vite",
+    "dev": "VITE_CJS_IGNORE_WARNING=true bunx vite",
     "build": "VITE_CJS_IGNORE_WARNING=true bun vite build --mode production",
     "preview": "bunx --bun vite preview --port 4173",
     "typecheck": "bun vue-tsc --noEmit --skipLibCheck",
+    "lint": "eslint --cache .",
     "update": "bun update --latest"
   },
   "dependencies": {
@@ -14,24 +15,30 @@
     "pinia": "^2.1.7",
     "signature_pad": "^5.0.2",
     "uuid": "^10.0.0",
-    "volar-service-prettier": "^0.0.54",
     "vue": "^3.4.31",
     "vue-router": "^4.4.0"
   },
   "devDependencies": {
-    "@tsconfig/node18": "^18.2.4",
-    "@types/node": "^20.14.10",
-    "@types/uuid": "^10.0.0",
     "@vitejs/plugin-vue": "^5.0.5",
+    "@eslint/js": "^9.6.0",
+    "@types/uuid": "^10.0.0",
     "@vue/tsconfig": "^0.5.1",
     "autoprefixer": "^10.4.19",
-    "npm-run-all2": "^6.2.2",
+    "eslint": "^9.6.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-no-relative-import-paths": "^1.5.5",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-unused-imports": "^4.0.0",
+    "eslint-plugin-vue": "^9.27.0",
     "postcss": "^8.4.39",
     "postcss-import": "^16.1.0",
     "postcss-nesting": "^12.1.5",
     "prettier": "^3.3.2",
+    "prettier-plugin-tailwindcss": "^0.6.5",
+    "sass": "^1.77.6",
     "tailwindcss": "^3.4.4",
     "typescript": "~5.5.3",
+    "typescript-eslint": "^7.15.0",
     "vite": "^5.3.3",
     "vite-plugin-svg-icons": "^2.0.1",
     "vite-plugin-vue-devtools": "^7.3.5",
