--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -1,11 +1,31 @@
 {
-  "files": [],
-  "references": [
-    {
-      "path": "./tsconfig.node.json"
-    },
-    {
-      "path": "./tsconfig.app.json"
+  "compilerOptions": {
+    //"target": "es2017",
+    "baseUrl": ".",
+    "module": "esnext",
+    "moduleResolution": "node",
+    "allowImportingTsExtensions": true,
+    "composite": true,
+    "skipLibCheck": true,
+    "esModuleInterop": true,
+    //"strict": true,
+    "noEmit": true,
+    "lib": ["esnext", "dom"],
+    "types": ["vite-plugin-svg-icons/client", "node"],
+    "paths": {
+      "@/*": ["./src/*"]
     }
-  ]
+  },
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.d.ts",
+    "src/**/*.vue",
+    "src/**/*.mjs",
+    "src/main.ts",
+    "src/utils/request.js",
+
+    "src/router/*",
+    "src/router/**/*"
+  ],
+  "exclude": ["node_modules", "dist", "public"]
 }
