--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -18,7 +18,7 @@ updates:
 - package-ecosystem: "npm"
   directory: "/web"
   schedule:
-    interval: weekly
+    interval: daily
   open-pull-requests-limit: 10
   commit-message:
     prefix: "🔧 build"
