--- a/web/package.json
+++ b/web/package.json
@@ -12,36 +12,36 @@
   "dependencies": {
     "@types/nprogress": "^0.2.3",
     "nprogress": "^0.2.0",
-    "pinia": "^3.0.0",
-    "signature_pad": "^5.0.3",
-    "uuid": "^11.0.1",
-    "vue": "^3.5.12",
-    "vue-router": "^4.4.5"
+    "pinia": "^3.0.2",
+    "signature_pad": "^5.0.7",
+    "uuid": "^11.1.0",
+    "vue": "^3.5.15",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.1.4",
-    "@eslint/js": "^9.12.0",
+    "@vitejs/plugin-vue": "^5.2.4",
+    "@eslint/js": "^9.27.0",
     "@types/uuid": "^10.0.0",
     "@vue/tsconfig": "^0.7.0",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^9.12.0",
-    "eslint-config-prettier": "^10.0.1",
-    "eslint-plugin-no-relative-import-paths": "^1.5.5",
-    "eslint-plugin-prettier": "^5.2.1",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^9.27.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-no-relative-import-paths": "^1.6.1",
+    "eslint-plugin-prettier": "^5.4.0",
     "eslint-plugin-unused-imports": "^4.1.4",
-    "eslint-plugin-vue": "^10.0.0",
-    "postcss": "^8.4.47",
+    "eslint-plugin-vue": "^10.1.0",
+    "postcss": "^8.5.3",
     "postcss-import": "^16.1.0",
-    "postcss-nesting": "^13.0.0",
-    "prettier": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.8",
-    "sass": "^1.79.5",
-    "tailwindcss": "^4.0.1",
-    "typescript": "~5.8.2",
-    "typescript-eslint": "^8.8.1",
-    "vite": "^6.0.1",
+    "postcss-nesting": "^13.0.1",
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "sass": "^1.89.0",
+    "tailwindcss": "^4.1.7",
+    "typescript": "~5.8.3",
+    "typescript-eslint": "^8.32.1",
+    "vite": "^6.3.5",
     "vite-plugin-svg-icons": "^2.0.1",
-    "vite-plugin-vue-devtools": "^7.4.6",
-    "vue-tsc": "^2.1.6"
+    "vite-plugin-vue-devtools": "^7.7.6",
+    "vue-tsc": "^3.0.0-alpha.8"
   }
 }
