--- a/web/package.json
+++ b/web/package.json
@@ -12,36 +12,36 @@
   "dependencies": {
     "@types/nprogress": "^0.2.3",
     "nprogress": "^0.2.0",
-    "pinia": "^3.0.2",
-    "signature_pad": "^5.0.7",
+    "pinia": "^3.0.3",
+    "signature_pad": "^5.0.10",
     "uuid": "^11.1.0",
-    "vue": "^3.5.15",
+    "vue": "^3.5.17",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.4",
-    "@eslint/js": "^9.27.0",
+    "@eslint/js": "^9.29.0",
     "@types/uuid": "^10.0.0",
     "@vue/tsconfig": "^0.7.0",
     "autoprefixer": "^10.4.21",
-    "eslint": "^9.27.0",
+    "eslint": "^9.29.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-no-relative-import-paths": "^1.6.1",
-    "eslint-plugin-prettier": "^5.4.0",
+    "eslint-plugin-prettier": "^5.5.0",
     "eslint-plugin-unused-imports": "^4.1.4",
-    "eslint-plugin-vue": "^10.1.0",
-    "postcss": "^8.5.3",
-    "postcss-import": "^16.1.0",
-    "postcss-nesting": "^13.0.1",
-    "prettier": "^3.5.3",
-    "prettier-plugin-tailwindcss": "^0.6.11",
-    "sass": "^1.89.0",
-    "tailwindcss": "^4.1.7",
+    "eslint-plugin-vue": "^10.2.0",
+    "postcss": "^8.5.6",
+    "postcss-import": "^16.1.1",
+    "postcss-nesting": "^13.0.2",
+    "prettier": "^3.6.0",
+    "prettier-plugin-tailwindcss": "^0.6.13",
+    "sass": "^1.89.2",
+    "tailwindcss": "^4.1.10",
     "typescript": "~5.8.3",
-    "typescript-eslint": "^8.32.1",
+    "typescript-eslint": "^8.35.0",
     "vite": "^6.3.5",
     "vite-plugin-svg-icons": "^2.0.1",
-    "vite-plugin-vue-devtools": "^7.7.6",
-    "vue-tsc": "^3.0.0-alpha.8"
+    "vite-plugin-vue-devtools": "^7.7.7",
+    "vue-tsc": "^2.2.10"
   }
 }
