✨ feat(auth): implement complete authentication system with OAuth, 2FA, and password management
Changes made in this commit:
- Modified: README.md, docs/README.md, docs/API_AUTHENTICATION.md
- Modified: internal/handlers/public/auth.go, internal/middleware/jwt.go
- Modified: internal/models/auth.go, internal/models/user.go
- Modified: internal/routes/api_routes.go, internal/app.go
- Modified: web/src/router.ts, web/src/pages/*.vue (multiple)
- Added: internal/handlers/public/oauth.go, auth_helpers.go
- Added: internal/handlers/public/auth_test.go, auth_comprehensive_test.go
- Added: internal/handlers/api/events.go, stats.go
- Added: internal/queries/user.go, webhook.go
- Added: migrations/20251030000001_add_auth_tables.sql
- Added: web/src/pages/SignIn.vue, SignUp.vue, ForgotPassword.vue, ResetPassword.vue, VerifyEmail.vue
- Added: web/src/utils/api/auth.ts
- Added: docs/TESTING.md, TEST_QUICKSTART.md
- Added: pkg/pdf/extract.go, extract_test.go, fill_test.go
- Added: scripts/test_auth.sh, cmd/goSign/gosign.example.toml
- Added: fixtures/migration/20241030000001_test_users.sql, README.md

Key changes:
- Implement user registration with email verification
- Add password reset flow with secure tokens
- Implement two-factor authentication (2FA) with TOTP
- Add OAuth integration for Google and GitHub
- Implement JWT refresh token mechanism (7 days lifetime)
- Add comprehensive authentication test suite (20+ test cases)
- Create authentication pages for frontend (SignIn, SignUp, ForgotPassword, ResetPassword, VerifyEmail)
- Add database migrations for auth tables (password_reset_token, email_verification_token, oauth_account)
- Implement stats and events API endpoints
- Add PDF extraction and testing utilities
- Update documentation with complete authentication guide
- Add testing documentation and quick start guide

--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint --cache .",
     "lint:fix": "eslint --cache . --fix",
     "format": "prettier --write \"src/**/*.{ts,tsx,vue,css,scss}\"",
+    "generate-types": "cd .. && go run github.com/gzuidhof/tygo@latest generate",
     "update": "bun update --latest"
   },
   "dependencies": {
