✨ feat(settings): store settings in database and add Admin Settings UI
Changes made in this commit:
- Modified: .vscode/launch.json, README.md, cmd/goSign/main.go, docs/README.md, go.mod, go.sum, internal/app.go, internal/config/config.go, internal/handlers/api/settings.go, internal/handlers/api/templates.go, internal/handlers/public/sign.go, internal/handlers/public/verify.go, internal/queries/account.go, internal/trust/trust.go, internal/worker/tasks.go, pkg/pdf/sign/pdfbyterange.go, pkg/pdf/sign/pdfsignature.go, pkg/pdf/sign/sign.go, pkg/pdf/sign/sign_test.go, pkg/storage/factory.go, web/src/i18n/locales/*.json, web/src/layouts/SettingsSidebar.vue, web/src/layouts/Sidebar.vue, web/src/pages/Settings.vue, web/src/pages/settings/SettingsSmtp.vue, web/src/pages/settings/SettingsStorage.vue, web/src/router.ts, web/src/utils/auth.ts
- Added: cmd/goSign/.env.example, internal/queries/setting.go, migrations/20260124000001_reorganize_settings.sql, pkg/appdir/appdir.go, web/src/pages/AdminSettings.vue
- Deleted: cmd/goSign/gosign.example.toml, internal/gen.go

Key changes:
- Reorganize settings: global settings in setting table (key/value/category), organization settings in account
- Add migration for setting table and global SMTP/SMS/storage default values; allow global email templates (account_id NULL)
- Add internal/queries/setting.go for settings persistence
- Add pkg/appdir for application data directory (lc_uploads, lc_signed) based on executable path
- Replace gosign.example.toml with .env.example; configuration from env and database
- Add Admin Settings page (/_/) with SMTP, SMS, storage configuration and update API settings handlers
- Update storage factory and sign/verify handlers to use appdir and DB settings
- Update frontend Settings layout, router, and i18n for Admin Settings

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
       "request": "launch",
       "mode": "auto",
       "program": "${workspaceFolder}/cmd/goSign",
-      "envFile": "${workspaceFolder}/docker/.env",
+      "envFile": "${workspaceFolder}/cmd/goSign/.env",
       "args": ["serve"],
       //"args": ["gen", "--config"],
     },
